After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722029 - [PATCH] Memory leak in gtkplacessidebar.c
[PATCH] Memory leak in gtkplacessidebar.c
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2014-01-12 06:04 UTC by John Lindgren
Modified: 2014-01-14 04:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leak (537 bytes, patch)
2014-01-12 06:04 UTC, John Lindgren
accepted-commit_now Details | Review

Description John Lindgren 2014-01-12 06:04:32 UTC
Created attachment 266048 [details] [review]
Fix memory leak

GtkPlacesSidebar creates a GtkTargetList and never destroys it.  Patch attached.
Comment 1 Matthias Clasen 2014-01-13 04:47:11 UTC
Review of attachment 266048 [details] [review]:

ok
Comment 2 Matthias Clasen 2014-01-14 03:21:37 UTC
John, it would be easier for me if you attached git-formatted patches. Then I can just git-bz apply them
Comment 3 John Lindgren 2014-01-14 04:31:01 UTC
Sorry about that.  Was up a bit late and didn't think about it.